--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   height: 100%;
   word-spacing: -2px;
   letter-spacing: -0.45px;
+  border: 1px solid red;
 }
 
 #wrap {
@@ -107,7 +108,7 @@ header h1 {
   overflow-x: hidden;
   opacity: 1;
   transition: 0.3s; /* 0.5 second transition effect to slide in the sidepanel */
-  
+
   /* display: none; */
   z-index: 100;
 }
@@ -437,7 +438,7 @@ footer button.mypage i {
 /*tab-list*/
 .tab-list {
   display: flex;
-  height:40px;
+  height: 40px;
   justify-content: start;
   align-items: center;
 }
@@ -451,11 +452,12 @@ footer button.mypage i {
   justify-content: center;
   align-items: center;
 }
-.tab-list.flex0 button{
+.tab-list.flex0 button {
   flex: 0;
   min-width: 25%;
 }
-.tab-list button.on,.tab-list button:active {
+.tab-list button.on,
+.tab-list button:active {
   border-bottom: 1px solid #e52d29;
   color: #e52d29;
 }
@@ -463,7 +465,6 @@ footer button.mypage i {
 /*news-list*/
 .news-list {
   border-bottom: 8px solid #eee;
-
 }
 .news-list ul li a {
   padding: 10px 20px;
@@ -479,13 +480,11 @@ footer button.mypage i {
   word-wrap: break-word;
   line-height: 28px;
   border-bottom: 1px solid #dcdcdc;
-  
 }
 .news-list ul li:first-child a {
   background-color: #f2f2f2;
   color: #000;
   font-weight: 600;
-
 }
 
 /*weather-wrap*/
@@ -523,7 +522,7 @@ footer button.mypage i {
   border-bottom: 8px solid #eee;
   overflow: hidden;
 }
-.banner-wrap a{
+.banner-wrap a {
   display: block;
   height: 80px;
   overflow: hidden;
@@ -952,7 +951,7 @@ footer button.mypage i {
   justify-content: flex-start;
   align-items: flex-start;
 }
-.around-list ul li > div:first-child{
+.around-list ul li > div:first-child {
   flex: 1;
 }
 .around-list ul li > div:last-child {
@@ -1350,7 +1349,7 @@ footer button.mypage i {
   padding-left: 5px;
   box-sizing: border-box;
 }
-.comment-input input:focus{
+.comment-input input:focus {
   outline: none;
 }
 .comment-input select {
@@ -1413,7 +1412,7 @@ footer button.mypage i {
   height: 20px;
   margin-right: 3px;
 }
-.comment-cont div{
+.comment-cont div {
   text-align: right;
 }
 
